compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case 1 { x -> 1 1 -> x }"

---

error: Unknown variable
  ┌─ /src/one/two.gleam:1:22
  │
1 │ case 1 { x -> 1 1 -> x }
  │                      ^ did you mean `Ok`?

The name `x` is not in scope here.

